passport en package.json

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "rimraf": "3.0.2",
     "rxjs": "7.5.7",
     "typeorm": "0.3.10",
-    "typeorm-adapter": "1.5.2"
+    "typeorm-adapter": "1.5.2",
+    "passport": "0.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "9.1.5",
